@@ -359,11 +359,7 @@ class Net_Ping
 			while (1) {
 				if ($retry_count >= $this->retries) {
 					$this->status = "down";
-					if ($error == "timeout") {
-						$this->ping_response = "UDP ping Timed out";
-					}else{
-						$this->ping_response = "UDP ping Refused";
-					}
+					$this->ping_response = "UDP ping error: " . $error;
 					$this->close_socket();
 
 					return false;
@@ -378,31 +374,33 @@ class Net_Ping
 				/* get the socket response */
 				$w = $f = array();
 				$r = array($this->socket);
-				switch(socket_select($r, $w, $f, $to_sec, $to_usec)) {
-				case 2:
-					/* connection refused */
-					$error = "refused";
-					break;
-				case 1:
-					/* get the end time */
-					$this->time = $this->get_time($this->precision);
-
-					/* get packet response */
-					$code = @socket_recv($this->socket, $this->reply, 256, 0);
-
-					/* get the error, if applicable */
-					$err = socket_last_error($this->socket);
-
-					/* set the return message */
-					$this->ping_status = $this->time * 1000;
-					$this->ping_response = "UDP Ping Success (" . $this->time*1000 . " ms)";
-
-					$this->close_socket();
-					return true;
-				case 0:
-					/* timeout */
-					$error = "timeout";
-					break;
+				$num_changed_sockets = socket_select($r, $w, $f, $to_sec, $to_usec);
+				if ($num_changed_sockets === false) {	
+					$error = "socket_select() failed, reason: " . socket_strerror(socket_last_error());
+				} else {
+					switch($num_changed_sockets) {
+						case 2: /* response received, so host is available */
+						case 1:
+							/* get the end time */
+							$this->time = $this->get_time($this->precision);
+							
+							/* get packet response */
+							$code = @socket_recv($this->socket, $this->reply, 256, 0);
+							
+							/* get the error, if applicable */
+							$err = socket_last_error($this->socket);
+							
+							/* set the return message */
+							$this->ping_status = $this->time * 1000;
+							$this->ping_response = "UDP Ping Success (" . $this->time*1000 . " ms)";
+							
+							$this->close_socket();
+							return true;
+						case 0:
+							/* timeout */
+							$error = "timeout";
+							break;
+					}
 				}
 
 				$retry_count++;
@@ -467,39 +465,40 @@ class Net_Ping
 				@socket_connect($this->socket, $host_ip, $this->port);
 				socket_set_block($this->socket);
 
-				switch(socket_select($r = array($this->socket), $w = array($this->socket), $f = array($this->socket), $to_sec, $to_usec)){
-				case 2:
-					/* connection refused */
-					$this->time = $this->get_time($this->precision);
-
-					if (($this->time*1000) <= $this->timeout) {
-						$this->ping_response = "TCP Ping connection refused (" . $this->time*1000 . " ms)";
-						$this->ping_status   = $this->time*1000;
-					}
-
-					$this->close_socket();
-
-					return true; /* "connection refused" says: host is alive (else ping would time out) */
-				case 1:
-					/* connected, so calculate the total time and return */
-					$this->time = $this->get_time($this->precision);
-
-					if (($this->time*1000) <= $this->timeout) {
-						$this->ping_response = "TCP Ping Success (" . $this->time*1000 . " ms)";
-						$this->ping_status   = $this->time*1000;
-					}
-
-					$this->close_socket();
-
-					return true;
-				case 0:
-					/* timeout */
-					$this->ping_response = "TCP ping timed out";
+				$w = $f = array();
+				$r = array($this->socket);
+				$num_changed_sockets = socket_select($r, $w, $f, $to_sec, $to_usec);
+				if ($num_changed_sockets === false) {	
+					$this->ping_response = "TCP ping: " . "socket_select() failed, reason: " . socket_strerror(socket_last_error());
 					$this->ping_status   = "down";
 
 					$this->close_socket();
 
 					return false;
+				} else {
+					switch($num_changed_sockets) {
+					case 2: /* response received, so host is available */
+					case 1:
+						/* connected, so calculate the total time and return */
+						$this->time = $this->get_time($this->precision);
+	
+						if (($this->time*1000) <= $this->timeout) {
+							$this->ping_response = "TCP Ping Success (" . $this->time*1000 . " ms)";
+							$this->ping_status   = $this->time*1000;
+						}
+	
+						$this->close_socket();
+	
+						return true;
+					case 0:
+						/* timeout */
+						$this->ping_response = "TCP ping timed out";
+						$this->ping_status   = "down";
+	
+						$this->close_socket();
+	
+						return false;
+					}
 				}
 			}
 		} else {
